--- a/Thesis/Dynamical_Model/Dynamical_Model.tex
+++ b/Thesis/Dynamical_Model/Dynamical_Model.tex
@@ -461,3 +461,6 @@ They are derived for when $Z$ is a constant and in steady-state.
 \end{align}
 One could also conceivably choose simple linear profiles, as the system would go into its steady-state relatively quickly.
 
+Together with Appendix~\ref{chapter:Plasma_Parameters}, the model is ready to be implemented in one's PDE solver of choice.
+The following chapter describes the choice made for this investigation using FiPy, a solver written in Python  that uses the Finite Volume Method.
+
