--- a/My_Notes/Full_Model_Notes.tex
+++ b/My_Notes/Full_Model_Notes.tex
@@ -63,8 +63,8 @@
 
 \begin{document}
 
-\section{Full Model Notes: 1 May
-2018}\label{full-model-notes-1-may-2018}
+\section{Full Model Notes: 9 May
+2018}\label{full-model-notes-9-may-2018}
 
 \small
 
@@ -89,25 +89,28 @@
 All temperatures are in eV. \small
 
 \begin{align}
-    v_{T_j} \,&=\, \sqrt{\frac{2 \, e \, T}{m_j}}~,~~~
-        \rho_{\theta j} \,=\, \frac{m_j \, v_{T_j}}{e \, B_\theta} \,=\,
-            \sqrt{\frac{2 \, m_j \, T}{e^2 \, B_\theta^2}}~,~~~
-        \omega_t \,=\, \frac{v_{T_i}}{q\,R}~,~~~
-        \omega_{bj} \,=\, \frac{\epsilon^{3/2} \, v_{T_j}}{q \, R}~,~~~
-        w_{bi} \,=\, \rho_{\theta i} \, \sqrt{\epsilon} \\
+    \epsilon \,&=\, \frac{a_m}{R}~,~~~ q \,=\,
+        \frac{\epsilon \, B_\phi}{B_\theta}~,~~~ v_{T_j} \,=\,
+        \sqrt{\frac{2 \, e \, T}{m_j}}~,~~~ \rho_{\theta j} \,=\,
+        \frac{m_j \, v_{T_j}}{e \, B_\theta} \,=\,
+        \sqrt{\frac{2 \, m_j \, T}{e^2 \, B_\theta^2}} \\
+     B_\theta \,&=\, \frac{\mu_0 \, I_\phi}{2 \pi \, a_m}~,~~~ \omega_t \,=\,
+        \frac{v_{T_i}}{q\,R}~,~~~ \omega_{bj} \,=\,
+        \frac{\epsilon^{3/2} \, v_{T_j}}{q \, R}~,~~~ w_{bi} \,=\,
+        \rho_{\theta i} \, \sqrt{\epsilon} \\
     \nu_{ei} \,&=\, 1.33\times 10^5 \frac{n_{20}}{(T_\text{keV})^{3/2}}
         \,=\, 4.2058\times 10^{-5} \frac{n}{(T_\text{eV})^{3/2}}~,~~~
         \nu_{ii} \,=\, 1.2\, \nu_{ei} \, \sqrt{\frac{m_e}{m_i}}~,~~~
         \nu_{*j} \,=\, \frac{\nu_{ij}}{\omega_{bj}} \\
     \langle \sigma_\text{cx} v \rangle \,&=\, 10^{-14} \sqrt[3]{100 \, T}
-        \,=\, 1.985\times 10^{-14} \sqrt{T} \\
-        &~~~~~~\text{Itoh 1989} ~~~~~~~~~ \text{Rozhansky 2001} \\
-    \text{Non-formal:}& ~~ n_0 \,=\, \frac{n_0(0)}
+        \,=\, 1.985\times 10^{-14} \sqrt{T}~,~~~
+        \text{Depricated:}~\nu_{in_0} \,=\, a_{in_0} \, \omega_{bi}~,~~~
+        \nu_\text{eff} \,=\, \nu_{ii} + \nu_{in_0} \\
+        \nonumber &~~~~~~\text{Itoh 1989} ~~~~~~~~~ \text{Rozhansky 2001} \\
+    &\text{Non-formal:} ~~ n_0 \,=\, \frac{n_0(0)}
         {\left(1 + \exp\left[k(x - d)\right]\right)}~,~~~
         n_0(0) \,=\, \frac{\theta \, \Gamma_c}{v_{T_i}} ~~ \text{for} ~~
-        0 < \theta \leq 1 \\
-    \text{Depricated:}&~\nu_{in_0} \,=\, a_{in_0} \, \omega_{bi}~,~~~
-        \nu_\text{eff} \,=\, \nu_{ii} + \nu_{in_0}
+        0 < \theta \leq 1
 \end{align}
 
 \normalsize
@@ -197,9 +200,9 @@ Generalized versions for boundary conditions at the plasma edge
 (\(x=0\)): \small
 
 \begin{align}
-    \frac{\partial n}{\partial x} \,=\, \frac{n}{\lambda_n}~,
-        ~~~~\frac{\partial T}{\partial x} \,=\, \frac{T}{\lambda_T}~,
-        ~~~~\left(\frac{\partial Z}{\partial x} \,=\, \frac{Z}{\lambda_Z}\right)~;
+    n^\prime(0) \,=\, \frac{n}{\lambda_n}~,~~~~ T^\prime(0) \,=\,
+        \frac{T}{\lambda_T}~,~~~~ Z^\prime(0) \,=\, \frac{Z}{\lambda_Z}~~~
+        \text{or} ~~~ Z^\prime(0) \,=\, 0;
 \end{align}
 
 \normalsize
@@ -224,10 +227,7 @@ initial condition for \(Z\): \small
         \left(1 + \frac{x}{\lambda_n}\right)~, ~~~~ T(x,0) \,=\, q_\infty \,
         \dfrac{\gamma - 1}{\Gamma_\infty} \, \left[1
         - \frac{\lambda_n}{\zeta \lambda_T + \lambda_n} \, \left(1
-        + \frac{x}{\lambda_n}\right)^{-\zeta}\right]~, \\
-    Z(x,0) \,&=\, Z_S\left[1 - \tanh\left(\dfrac{L\,x - L}{2}\right)\right]
-        \,=\, Z_S\left[1 - \frac{\exp(L\,x - L) - 1}{\exp(L\,x - L)
-        + 1}\right]~.
+        + \frac{x}{\lambda_n}\right)^{-\zeta}\right]~.
 \end{align}
 
 \normalsize
@@ -253,14 +253,9 @@ slightly incorrect, since the polarization current is defined slightly
 incorrectly in his version: \small
 
 \begin{align}
-    &\frac{m_i n T}{e \rho_{\theta i} B^2} \, \frac{\partial Z}{\partial t}
-        \,=\, \frac{m_i \mu_i n T}{e \rho_{\theta i} B_\theta^2} \,
-        \frac{\partial^2 Z}{\partial x^2} \,+\, \left(g_n^\text{an} -
-        g_n^\text{cx}\right) \frac{n^\prime}{n} \,+\, \left(g_T^\text{an} -
-        g_T^\text{cx}\right) \frac{T^\prime}{T} \,+\, \left(g_Z^\text{an} -
-        g_Z^\text{cx}\right) Z - e\Gamma_i^{\pi\parallel} - e\Gamma_i^\text{ol} \\
-    &\frac{m_i n T}{e^2 \rho_{\theta i} B^2} \frac{\partial Z}{\partial t}
-        \,=\, \frac{m_i \mu n T}{e^2 \rho_{\theta i} B_\theta^2} \, 
+    &\frac{m_i \, n \, T}{e^2 \, \rho_{\theta i} \, B^2}
+        \frac{\partial Z}{\partial t} \,=\,
+        \frac{m_i \, \mu \, n \, T}{e^2 \rho_{\theta i} \, B_\theta^2} \,
         \frac{\partial^2 Z}{\partial x^2} \,+\, \Gamma_e^\text{an} \,-\,
         \Gamma_i^{\pi\parallel} \,-\, \Gamma_i^\text{cx} \,-\,
         \Gamma_i^\text{ol}
@@ -285,6 +280,9 @@ Corrected version, which is used: \small
 
 \normalsize
 
+Some of the fluxes take this form:
+\(\Gamma_j^\text{k} \,=\, g_n^\text{k}\,\dfrac{n^\prime}{n} \,+\, g_T^\text{k}\,\dfrac{T^\prime}{T} \,+\, g_Z^\text{k}\,Z\)
+
 \begin{itemize}
 \tightlist
 \item
@@ -296,9 +294,9 @@ Corrected version, which is used: \small
 \begin{align}
     D_{\pi\parallel} \,=\, \frac{\epsilon^2}{(x - a_m) \sqrt{\pi}}\,
         \frac{\rho_{\theta i} \, T}{B}~,~~~
-    e \Gamma_i^{\pi\parallel} \,=\, -e\,n_e\,D_{\pi\parallel}
-        \left(-\frac{n^\prime}{n} - \frac{Z}{\rho_{\theta i}}\right) \,
-        \text{Im}\left[X\left(Z + \frac{i \nu_{ii}}{\omega_t}\right)\right]
+    e \Gamma_i^{\pi\parallel} \,=\, e\,n_e\,D_{\pi\parallel}
+        \left(\frac{n^\prime}{n} + \frac{Z}{\rho_{\theta i}}\right) \,
+        \text{Im}\left[X\left(Z + \frac{i \, \nu_{ii}}{\omega_t}\right)\right]
 \end{align}
 
 \normalsize
@@ -312,8 +310,8 @@ Corrected version, which is used: \small
   D_\text{an} \,&=\, \frac{\epsilon^2 \sqrt{\pi}}{2 a_m}
       \frac{\rho_{\theta e} T}{B}~,~~
       g_n^\text{an} \,=\, -e \,n\, D_\text{an}~,~~
-      g_T^\text{an} \,=\, -e \,n\, \alpha_\text{an}\, D_\text{an}~,~~
-      g_Z^\text{an} \,=\, \frac{-e \,n\, D_\text{an}}{\rho_{\theta i}}
+      g_T^\text{an} \,=\, \alpha_\text{an}\, g_n^\text{an}~,~~
+      g_Z^\text{an} \,=\, \frac{g_n^\text{an}}{\rho_{\theta i}}
   \end{align}
 
   \normalsize
@@ -325,7 +323,7 @@ Corrected version, which is used: \small
       -\frac{m_i \,n_0 \langle\sigma_\text{cx} v\rangle \,n \,T}{B_\theta^2}
       \left[\frac{B_\theta^2}{\epsilon^2 B_\phi^2} + 2\right]~,~~~~
       g_T^\text{cx} \,=\, \alpha_\text{cx}\,g_n^\text{cx}~,~~~~
-      g_Z^\text{cx} \,=\, -\frac{g_n^\text{cx}}{\rho_{\theta i}}
+      g_Z^\text{cx} \,=\, \pm\frac{g_n^\text{cx}}{\rho_{\theta i}}~?
   \end{align}
 
   \normalsize
