--- a/Thesis/Appendices/Plasma_Parameters.tex
+++ b/Thesis/Appendices/Plasma_Parameters.tex
@@ -46,3 +46,6 @@ The ion collisionality is defined as the ratio of the ion-ion collision frequenc
 	\nu_{*i} \,=\, \frac{\nu_{ii}}{\omega_{bi}} \label{eq:collisionality}
 \end{align}
 
+The ASDEX-U machine parameters are presented from the source file.
+\inputminted[firstline=24, lastline=33, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/parameters.py}
+
