--- a/Thesis/Conclusion/Conclusion.tex
+++ b/Thesis/Conclusion/Conclusion.tex
@@ -19,7 +19,7 @@ Also, the high spatial sensitivity pins it directly to the edge.
 The transport barrier typically forms a centimeter or two into the plasma, relatively distant from the area which the ion orbit loss is present.
 Uncertainties in the position or value of $Z$ highly affect this term, but does not manifest in any significant change in $Z$ itself.
 
-The shear viscosity is sensitive only to the dynamic viscosity $\mu$, and is completely necessary to have the system at all.
+The shear viscosity is sensitive only to the dynamic viscosity $\mu$, and is completely necessary to have the system.
 However, the charge exchange friction and anomalous electron loss both significantly depend on the density and temperature gradients.
 Real-world calculation hypothetically become difficult since error is compounded in measurements of these.
 
