--- a/Thesis/Appendices/Code.tex
+++ b/Thesis/Appendices/Code.tex
@@ -1,10 +1,19 @@
 \chapter{Code}\label{chapter:Code}
 As covered Chapter~\ref{chapter:numerical_method}, the finite volume method solver FiPy \cite{guyer_fipy:_2009} is used to solve the system of equations.
-This section will obviously not be comprehensive, but it should give an idea on the manner by which the equations were declared.
+This section will obviously not cover the code comprehensively, but it should give an idea on how the equations were declared.
+
+In the main solving program, the declarations of the equations and their coupling is the following:
 \inputminted[firstline=22, lastline=43, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
+One may notice in line \mintinline{python}{33}, the \mintinline{python}{TransientTerm} declares density $n$ as a coefficient.
+This corresponds to the term $\dfrac{\partial (n \, Z)}{\partial t}$; however, as noted earlier, the timescale by which the density and temperature evolves is much slower than that of the radial electric field.
+The extra term associated with it is therefore much smaller than the one written in on the left-hand side of Eq~\ref{eq:reduced_normalized_Z_equation}.
 
 Because the system is highly nonlinear, it is required to ``sweep'' for the solution.
 This is where the solver attempts a solution, and returns a residual.
 The user is required to choose a tolerance which the residual must be less than for the solver to move to the next time iteration.
 \inputminted[firstline=98, lastline=113, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
+
+The \mintinline{python}{GMRES_Solver} option in the sweep indicates that the Generalized Minimal Residual Method was chosen for solving.
+It was most consistent in converging the system.
+The residual tolerance for the system in SI units was set to $10^{14}$.
 
