--- a/Thesis/Results/Results.tex
+++ b/Thesis/Results/Results.tex
@@ -15,8 +15,8 @@
 
 \TwoFig{../Graphics/Model_Graphs/Original_FS1_0000.png}
 	{CAPTION!}
-	{fig:Original_FS_L--mode}
+	{fig:Original_FS_L--mode_double}
 	{../Graphics/Model_Graphs/Original_FS_0200.png}
 	{CAPTION!}
-	{fig:Original_FS_H--mode}
+	{fig:Original_FS_H--mode_double}
 
