TwoFig now requires full includegraphics as argue

--- a/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
+++ b/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
@@ -18,12 +18,12 @@ The simplest form for any dynamical system is known as the topological norm form
 A parameter plot of $x$ versus $a$ in Fig.~\ref{fig:simple_fold} illustrates this, with the green and red curves representing the stable and unstable steady-state solutions, respectively.
 
 %{{{ Two figures for simple bifurcations (co-dimension 1 and 2)
-\TwoFig{../Graphics/Bif_Graphs/Simple_fold.png}
+\TwoFig{\includegraphics[width=\textwidth]{../Graphics/Bif_Graphs/Simple_fold.png}}
 	{Plot of parameter space for $\dot{x} = a + x^2$ (Eq.~\ref{eq:simple_fold}), with the co-dimension 1 bifurcation occurring at $a = 0$. %
 	For $a < 0$, the system has two steady-state solutions; the green is stable, while the red is unstable.
 	For $a > 0$, there is no steady-state solution.}
 	{fig:simple_fold}
-	{../Graphics/Bif_Graphs/co-2_fold.png}
+	{\includegraphics[width=\textwidth]{../Graphics/Bif_Graphs/co-2_fold.png}}
 	{Plot of parameter space for $\dot{x} = -(a + x - x^3)$ (Eq.~\ref{eq:sharp_bif}). %
 	This system showcases two fold bifurcations (each of co-dimension 1), at the turning points $a_{\pm\text{crit}}$, with two stable regions, in green and blue. %
 	The red region is an intermediate that is unstable.}
@@ -36,8 +36,8 @@ In the case of Eq.~\ref{eq:simple_fold}, there is only a single parameter, and i
 
 \subsection{Sharp and Smooth Transition Bifurcations}
 %{{{ Two figures for zeros of the co-dimension 2 bifurcation
-\TwoFigOneCap{../Graphics/Bif_Graphs/stationary_b-0_8.png}
-	{../Graphics/Bif_Graphs/stationary_b_1_1.png}
+\TwoFigOneCap{\includegraphics[width=\textwidth]{../Graphics/Bif_Graphs/stationary_b-0_8.png}}
+	{\includegraphics[width=\textwidth]{../Graphics/Bif_Graphs/stationary_b_1_1.png}}
 	{Phase plots for Eq.~\ref{eq:sharp_bif}, with different values of $a$ within each plot. %
 	There is a variance in the number of zeros based on the values of $a$ in the right plot, while there is strictly one zero for all values of $a$ in the left plot. %
 	When there is multiple roots, the middle zero is always unstable.}
@@ -57,10 +57,10 @@ The distinction between sharp and smooth transitions in this co-dimension 2 bifu
 As $b$ approaches zero from some positive value, the size of the hysteresis shrinks, with it vanishing at $b = 0$, in which the smooth transition occurs.
 
 %{{{ Two figures for co-dimension 2 bifurcation, with surface plot
-\TwoFigOneCap{../Graphics/Bif_Graphs/co-2_fold_b_var.png}
-	{../Graphics/Bif_Graphs/Bif_3D.png}
+\TwoFigOneCap{\includegraphics[width=\textwidth]{../Graphics/Bif_Graphs/co-2_fold_b_var.png}}
+	{\includegraphics[width=\textwidth]{../Graphics/Bif_Graphs/Bif_3D.png}}
 	{These plots show the mentioned co-dimension 2 cusp bifurcation, composed of two co-dimension 1 fold bifurcations, as described by Equation~\ref{eq:sharp_bif}.
-	The plot on the left shows cross-sections for different $b$ values, with the sharp-smooth boundary occuring at $b = 0$.
+	The plot on the left shows cross-sections for different $b$ values, with the sharp-smooth boundary occurring at $b = 0$.
 	The plot on the right is the surface plot of this same model \cite{weymiens_bifurcation_2014}.}
 	{fig:Bif_hysteresis}
 %}}}
