Numpy for all SageTex

--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -108,6 +108,10 @@
 % ---------------------------------------------------------
 
 \begin{document}
+% Import python packages for all SageTeX code
+\begin{sagesilent}
+	import numpy
+\end{sagesilent}
 
 % Number the pages before the start
 \pagenumbering{roman}
