MUCH Sage added

--- a/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
+++ b/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
@@ -18,12 +18,57 @@ The simplest form for any dynamical system is known as the topological norm form
 A parameter plot of $x$ versus $a$ in Fig.~\ref{fig:simple_fold} illustrates this, with the green and red curves representing the stable and unstable steady-state solutions, respectively.
 
 %{{{ Two figures for simple bifurcations (co-dimension 1 and 2)
-\TwoFig{\includegraphics[width=\textwidth]{../Graphics/Bif_Graphs/Simple_fold.png}}
+\begin{sagesilent}
+	reset()
+	var('x,t,a,b')
+		# ----------------- Co-dimension 1 ------------------------
+	a_min, a_max = -1.5, 0.5
+	x_min, x_max = -1.25, 1.25
+
+	# Co-dimension 1 equation
+	f1 = diff(x,t) == a + x^2
+
+	co_1 = plot_vector_field((0, f1 / sqrt(a^2 + x^2)), (a, a_min, a_max), (x, x_min, x_max), color='blue', axes=True, frame=True)
+
+
+	co_1_root = solve(a + x^2 == 0, x)
+	co_1_lower = implicit_plot(co_1_root[0], (a,a_min,a_max), (x,x_min,x_max), linewidth=2.5, axes_labels=['$a$','$x$'], color='red', plot_points=2000, gridlines=False, fontsize=20, title="Co-dimension 1 Fold")
+	co_1_upper = implicit_plot(co_1_root[1], (a,a_min,a_max), (x,x_min,x_max), linewidth=2.5, color='green', plot_points=2000, figsize=10, typeset='type1')
+
+	# Zero point
+	co_1_zero = point((0,0), size=30, color='black')
+
+	co_1_total = co_1_lower + co_1_upper + co_1 + co_1_zero
+
+	# ----------------- Co-dimension 2 ------------------------
+	a_min, a_max = -1.2, 1.2
+	x_min, x_max = -1.5, 1.5
+	var('b')
+
+	# Co-dimension 2 equation
+	f2 = diff(x,t) == -(a + b*x - x^3).subs(b=1.1)
+
+	co_2 = plot_vector_field((0, f2), (a, a_min, a_max), (x, x_min, x_max), color='blue', axes=True, frame=True)
+
+	# Points
+	turning_point_a = 1/3*sqrt(3)
+	turning_point_x = solve(f2.subs(a=turning_point_a), x)[0].right().real()
+
+	co_2_low = implicit_plot(f2.right() == 0, (a, a_min, a_max), (x, x_min, -turning_point_a), linewidth=2.5, axes_labels=['$a$','$x$'], axes=True, fontsize=20, title="Co-dimension 2 Fold")
+	co_2_mid = implicit_plot(f2.right() == 0, (a, a_min, a_max), (x, -turning_point_a, turning_point_a), linewidth=2.5, color='red', axes=True)
+	co_2_high = implicit_plot(f2.right() == 0, (a, a_min, a_max), (x, turning_point_a, x_max), linewidth=2.5, color='green', axes=True, figsize=10, typeset='type1')
+
+	#co_2_zero1 = point((turning_point_a, turning_point_x), size=40, color='black')
+	#co_2_zero2 = point((-turning_point_a, -turning_point_x), size=40, color='black')
+
+	co_2_total = co_2 + co_2_low + co_2_mid + co_2_high
+\end{sagesilent}
+\TwoFig{\sageplot[width=\textwidth]{co_1_total}}
 	{Plot of parameter space for $\dot{x} = a + x^2$ (Eq.~\ref{eq:simple_fold}), with the co-dimension 1 bifurcation occurring at $a = 0$. %
 	For $a < 0$, the system has two steady-state solutions; the green is stable, while the red is unstable.
 	For $a > 0$, there is no steady-state solution.}
 	{fig:simple_fold}
-	{\includegraphics[width=\textwidth]{../Graphics/Bif_Graphs/co-2_fold.png}}
+	{\sageplot[width=\textwidth]{co_2_total}}
 	{Plot of parameter space for $\dot{x} = -(a + x - x^3)$ (Eq.~\ref{eq:sharp_bif}). %
 	This system showcases two fold bifurcations (each of co-dimension 1), at the turning points $a_{\pm\text{crit}}$, with two stable regions, in green and blue. %
 	The red region is an intermediate that is unstable.}
@@ -36,8 +81,125 @@ In the case of Eq.~\ref{eq:simple_fold}, there is only a single parameter, and i
 
 \subsection{Sharp and Smooth Transition Bifurcations}
 %{{{ Two figures for zeros of the co-dimension 2 bifurcation
-\TwoFigOneCap{\includegraphics[width=\textwidth]{../Graphics/Bif_Graphs/stationary_b-0_8.png}}
-	{\includegraphics[width=\textwidth]{../Graphics/Bif_Graphs/stationary_b_1_1.png}}
+\begin{sagesilent}
+	reset()
+
+	var('x, a, b, x_dot,t')
+	x_min, x_max = -2.0, 2.0
+
+	"""
+		ROOT FINDING function, for all of the roots.
+		Returns a sorted list of UNIQUE roots. This does NOT work when there
+		is multiplicity in the roots. Use `w.roots()` to symbolically check
+		for multiplicity.
+	"""
+	def find_root_recursive(func, lower_bound, upper_bound, tol=1.0e-12):
+	    L = []
+	    try:
+	    	x0 = find_root(func, lower_bound, upper_bound)
+	    	L.append(x0)
+	    	L += find_root_recursive(func, lower_bound, x0-tol, tol)
+	    	L += find_root_recursive(func, x0+tol, upper_bound, tol)
+	    except:
+	    	pass
+	    return L
+
+	# ----------------- \dot{x} vs x plots --------------------
+	x_dot = -(a + b*x - x^3)
+
+	a_list = [-2.0, 0.0, 2.0]
+
+	plot_list = []
+	point_list = []
+
+	the_title = "$\dot{x} = -(a + bx - x^3)$"
+	ax_labels = ["$x$", r"$\dot{x}$"]
+	the_font_size = 54
+
+	b_selection = -0.8
+
+	## The one with only one zero
+	for i in range(len(a_list)):
+	    this_loops_color = rainbow(len(a_list)+2)[i+2]
+
+	    the_label = "$a = " + str(a_list[i].n(prec=10)) + "$"
+
+	    plot_list.append(plot(x_dot.subs(a=a_list[i], b=b_selection),\
+	    		(x, x_min, x_max), color=this_loops_color, gridlines='major',\
+	    		title=the_title, thickness=4.0, frame=True, axes=False,\
+	    		legend_label=the_label, axes_labels=ax_labels, figsize=16,\
+	    		fontsize=the_font_size, typeset='type1'))
+
+	    # Create list of points of zeros
+	    particular_roots = find_root_recursive(x_dot.subs(a=a_list[i], b=b_selection), x_min, x_max)
+
+	    for j in particular_roots:
+	    	point_list.append(ellipse((j,0), 0.04, 0.22, color=this_loops_color,\
+	    			thickness=4.0, aspect_ratio='automatic'))
+
+	# Create the parameter box for b
+	b_parameter_box1 = text('$b = ' + str(b_selection.n(prec=8)) + '$',\
+			(x_max-0.1, -10.0), bounding_box={'boxstyle':'round', 'fc':'w'},\
+			fontsize=the_font_size, color='black', horizontal_alignment='right')
+
+	combined_plots1 = sum(plot_list) + sum(point_list) + b_parameter_box1
+	combined_plots1.set_legend_options(font_size=the_font_size)
+
+
+	## The one with 2 or 3 zeros
+	# Reset the plot and point lists
+	plot_list = []
+	point_list = []
+
+	b_selection = 1.1
+	ax_labels=["$x$", ""]
+
+	for i in range(len(a_list)):
+	    this_loops_color = rainbow(len(a_list)+2)[i+2]
+
+	    the_label = "$a = " + str(a_list[i].n(prec=10)) + "$"
+
+	    plot_list.append(plot(x_dot.subs(a=a_list[i], b=b_selection),\
+	    		(x, x_min, x_max), color=this_loops_color, gridlines='major',\
+	    		thickness=4.0, frame=True, axes=False,\
+	    		title=the_title, axes_labels=ax_labels, figsize=16,\
+	    		fontsize=the_font_size, typeset='type1'))
+
+	    # Create list of points of zeros
+	    particular_roots = find_root_recursive(x_dot.subs(a=a_list[i], b=b_selection), x_min, x_max)
+	#	particular_roots = [find_root(x_dot.subs(a=a_list[i], b=b_selection), x_min, x_max)]
+	    for j in particular_roots:
+	    	point_list.append(ellipse((j,0), 0.03, 0.2, color=this_loops_color,\
+	    			thickness=4.0, aspect_ratio='automatic'))
+
+
+	# Create the parameter box for b
+	b_parameter_box3 = text('$b = ' + str(b_selection.n(prec=10)) + '$',\
+			(x_max-0.1, -6.8), bounding_box={'boxstyle':'round', 'fc':'w'},\
+			fontsize=the_font_size, color='black', horizontal_alignment='right')
+
+
+	# Tangent root function
+	tangent_root_fun = x_dot.subs(a=sqrt(4*b_selection^3/27), b=b_selection)
+
+	# Equation with exactly 2 ROOTS
+	plot_list.append(plot(tangent_root_fun, (x, x_min, x_max), color='black',\
+			legend_label=r'$a = \sqrt{\frac{4\,b^3}{27}}$', thickness=4.0))
+
+	## Find lower, tangent root
+	point_list.append(ellipse((find_root(tangent_root_fun, x_min, 0),0), 0.03,\
+			0.2, color='black', thickness=4.0, aspect_ratio='automatic'))
+
+	# Find upper, non-tangent root, and make point
+	point_list.append(ellipse((find_root_recursive(tangent_root_fun, 0, x_max)[0],\
+			0), 0.03, 0.2, color='black', thickness=4.0, aspect_ratio='automatic'))
+
+	combined_plots3 = sum(plot_list) + sum(point_list) + b_parameter_box3
+	combined_plots3.set_legend_options(font_size=the_font_size, loc='upper left')
+
+\end{sagesilent}
+\TwoFigOneCap{\sageplot[width=1.1\textwidth]{combined_plots1}}
+	{\sageplot[width=1.1\textwidth]{combined_plots3}}
 	{Phase plots for Eq.~\ref{eq:sharp_bif}, with different values of $a$ within each plot. %
 	There is a variance in the number of zeros based on the values of $a$ in the right plot, while there is strictly one zero for all values of $a$ in the left plot. %
 	When there is multiple roots, the middle zero is always unstable.}
@@ -57,7 +219,54 @@ The distinction between sharp and smooth transitions in this co-dimension 2 bifu
 As $b$ approaches zero from some positive value, the size of the hysteresis shrinks, with it vanishing at $b = 0$, in which the smooth transition occurs.
 
 %{{{ Two figures for co-dimension 2 bifurcation, with surface plot
-\TwoFigOneCap{\includegraphics[width=\textwidth]{../Graphics/Bif_Graphs/co-2_fold_b_var.png}}
+\begin{sagesilent}
+	reset()
+
+	var('x,t,a,b')
+	# ----------------- Co-dimension 2 ------------------------
+	a_min, a_max = -1.1, 1.1
+	x_min, x_max = -1.4, 1.4
+	var('b')
+
+	# Co-dimension 2 equation
+	f2 = diff(x,t) == -(a + b*x - x^3)
+
+	the_axes_labels = ['$a$','$x$']
+	the_figsize = 10
+	the_title = "Co-dimension 2 Fold"
+	the_linewidth = 2.0
+	the_fontsize = 20
+
+	b_values = [-0.5, 0.0, 1.0]
+	b_plots = []
+	the_label = []
+	the_colors = rainbow(len(b_values))
+
+	for i in range(len(b_values)):
+
+	    b_plots.append(implicit_plot(f2.right().real().subs(b=b_values[i]) == 0,\
+	    		(a, a_min, a_max), (x, x_min, x_max), linewidth=the_linewidth,\
+	    		color=the_colors[i], axes_labels=the_axes_labels,\
+	    		axes=True, gridlines=True, figsize=10,\
+	    		fontsize=the_fontsize, title=the_title, typeset='type1'))
+
+	boxes = [text('$b = -0.5$', (0.9, 0.7),\
+			bounding_box={'boxstyle':'round', 'fc':'w'},\
+			fontsize=the_fontsize-4, color='black')]
+	boxes.append(text('$b = 0.0$', (0.95, 1.0),\
+			bounding_box={'boxstyle':'round', 'fc':'w'},\
+			fontsize=the_fontsize-4, color='black'))
+	boxes.append(text('$b = 1.0$',(0.25, 1.2),\
+			bounding_box={'boxstyle':'round', 'fc':'w'},\
+			fontsize=the_fontsize-4, color='black'))
+	boxes.append(text('$a - bx + x^3 = 0$', (0.6, -1.3),\
+			bounding_box={'boxstyle':'round', 'fc':'w'},\
+			fontsize=the_fontsize, color='black'))
+
+	combined_plots = sum(b_plots) + sum(boxes)
+\end{sagesilent}
+
+\TwoFigOneCap{\sageplot[width=\textwidth]{combined_plots}}
 	{\includegraphics[width=\textwidth]{../Graphics/Bif_Graphs/Bif_3D.png}}
 	{These plots show the mentioned co-dimension 2 cusp bifurcation, composed of two co-dimension 1 fold bifurcations, as described by Equation~\ref{eq:sharp_bif}.
 	The plot on the left shows cross-sections for different $b$ values, with the sharp-smooth boundary occurring at $b = 0$.
