--- a/Thesis/Results/Results.tex
+++ b/Thesis/Results/Results.tex
@@ -13,10 +13,10 @@
 	\label{fig:Original_FS_H--mode}
 \end{figure}
 
-\TwoFig{../Graphics/Model_Graphs/Original_FS1_0000.png}
+\TwoFig{\includegraphics[width=\textwidth]{../Graphics/Model_Graphs/Original_FS1_0000.png}}
 	{CAPTION!}
 	{fig:Original_FS_L--mode_double}
-	{../Graphics/Model_Graphs/Original_FS_0200.png}
+	{\includegraphics[width=\textwidth]{../Graphics/Model_Graphs/Original_FS_0200.png}}
 	{CAPTION!}
 	{fig:Original_FS_H--mode_double}
 
