--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -111,6 +111,8 @@
 % Import python packages for all SageTeX code
 \begin{sagesilent}
 	import numpy
+	import scipy
+	from scipy import constants
 \end{sagesilent}
 
 % Number the pages before the start
